<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Andy框架</string>
    <string name="image">image</string>
    <string name="contentDescription">contentDescription</string>
    
    <string name="andy_description">andy\nwin58@qq.com</string>
    
    
    <string name="activity_start_title">andy 框架</string>
    <string name="activity_circle_title">旋转控件</string>
    <string name="activity_font_anim_title">文字动画</string>
    <string name="activity_draw_image_title">绘画控件</string>
    <string name="activity_webview_progress_title">进度条WebView</string>
    <string name="activity_drag_view_title">控件拖拽</string>
    <string name="activity_install_states_title">安装状态监听</string>
    <string name="activity_volley_title">volley开源框架</string>
    <string name="activity_andyframework_http_title">andy http框架测试</string>
    <string name="activity_andyframework_bitmap_title">andy bitmap测试</string>
    <string name="activity_webservice_title">webservice测试</string>
    <string name="activity_group_listview_title">listView分组显示</string>
    
    <string name="activity_app_installed_all_title">系统所有应用</string>
    <string name="activity_app_installed_external_title">安装的应用程序</string>
    <string name="activity_reside_layout_title">滑动缩小菜单</string>
    <string name="activity_sliding_horizontal_title">左侧菜单horizontalScrollView实现</string>
    <string name="activity_expandableListView_title">分组listview</string>
    <string name="activity_gifView_title">GIF动画显示</string>
    <string name="activity_network_state_title">网络状态相关</string>
    <string name="activity_validate_title">常用正则验证</string>
    <string name="activity_animation_title">动画测试</string>
    <string name="activity_surfaceview_title">surfaceview测试</string>
    <string name="activity_drag_gridview_title">拖拽换位</string>
    <string name="activity_db_title">数据库框架</string>
    
    <string name="activity_game_surfaceview_title">surfaceview绘制</string>
    <string name="activity_game_collision_surfaceview_title">碰撞测试</string>
    
    <string name="activity_location_title">百度地理位置</string>
    <string name="activity_location_gaode_title">高德地理位置</string>
    <string name="activity_location_tencent_title">腾讯地图</string>
    <string name="activity_jpush_title">极光推送</string>

    <string name="nba_bulls">公牛</string>
    <string name="nba_bucks">雄鹿</string>
    <string name="nba_grizzly">灰熊</string>
    <string name="nba_maverick">小牛</string>
    <string name="nba_bobcat">山猫</string>
    <string name="nba_raptor">猛龙</string>
    <string name="nba_wolves">森林狼</string>
    
    <string name="stationId">%1$s</string>
    
    <string name="andyframework_http_get">get请求</string>
    <string name="andyframework_http_post">post请求</string>
    
    <string name="webservice_http_get">发送请求</string>
    
    <string name="andyframework_bitmap_load">加载图片</string>
    <string name="andyframework_bitmap_clear_cache">清除缓存</string>
    <string name="andyframework_refresh">刷新</string>
    <string name="andyframework_commit">提交</string>
    <string name="andyframework_test">测试</string>
    
    <!-- 启动页面 -->
    <string name="activity_start_group_all_title">全部分类</string>
    <string name="activity_start_group_framework_title">框架类</string>
    <string name="activity_start_group_framework_desc">andy framework的使用测试demo</string>
    <string name="activity_start_group_view_title">控件类</string>
    <string name="activity_start_group_view_desc">常用自定义控件的测试demo</string>
    <string name="activity_start_group_application_title">系统类</string>
    <string name="activity_start_group_application_desc">application相关的一些使用</string>
    <string name="activity_start_group_help_title">工具类</string>
    <string name="activity_start_group_help_desc">常用的自定义工具类的使用</string>
    <string name="activity_start_group_third_party_title">第三方应用</string>
    <string name="activity_start_group_third_party_desc">第三方应用的测试demo</string>
    <string name="activity_start_group_animator_title">动画相关</string>
    <string name="activity_start_group_animator_desc">一些动画的使用demo</string>
    <string name="activity_start_group_other_title">其他类型</string>
    <string name="activity_start_group_other_desc">其他杂项测试demo</string>
    <string name="activity_start_group_game_title">游戏开发</string>
    <string name="activity_start_group_game_desc">游戏开发相关技能练习</string>
    
    <!-- andy DB 测试 -->
    <string name="db_username_tip">请输入用户名</string>
    <string name="db_password_tip">请输入密码</string>
    <string name="db_insert_update_data">插入/更新</string>
    <string name="db_select_data">查询</string>
    <string name="db_delete_data">删除</string>
    
    <!-- 高德地图配置 -->
    <string name="weather_forecast_title">天气预报</string>
    <string name="weather_forecast_current">实时天气预报</string>
    <string name="weather_forecast_future">未来天气预报</string>
    <string name="location_title">定位</string>
    <string name="location_net_method">网络（基站+WIFI）定位</string>
    <string name="location_mulity_method">混合定位（GPS+网络）</string>
    <string name="location_gps_method">GPS定位（建议室外使用）</string>
    <string name="location_geofence_method">地理围栏（警戒区域提醒）</string>
    <string name="current_weather_report_title">实时天气</string>
    <string name="future_weather_report_title">天气预报</string>
    <string name="net_location_title">网络定位</string>
    <string name="gps_location_title">GPS定位</string>
    <string name="weather_location">"地      点："</string>
    <string name="weather_weather">"天      气："</string>
    <string name="weather_temperature">"气      温："</string>
    <string name="weather_wind_direction">"风      向："</string>
    <string name="weather_wind_power">"风      力："</string>
    <string name="weather_air_humidity">空气湿度：</string>
    <string name="weather_weather_publish">发布时间：</string>
    <string name="location_latlng">"坐      标："</string>
    <string name="location_accurancy">"精      度："</string>
    <string name="location_method">定位方式：</string>
    <string name="location_time">定位时间：</string>
    <string name="location_description">位置描述：</string>
    <string name="location_country">国&#160;&#160;&#160;&#160;&#160;&#160;家 ：</string>
    <string name="location_province">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;省 ：</string>
    <string name="location_city">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;市   ：</string>
    <string name="location_county">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;区 ：</string>
    <string name="location_road">街&#160;&#160;&#160;&#160;&#160;&#160;道   ：</string>
    <string name="location_poi">POI名称 ：</string>
    <string name="location_city_code">城市编码：</string>
    <string name="location_area_code">区域编码：</string>
    <string name="gpsfollow">追随</string>
    <string name="gpslocate">定位</string>
    <string name="gpsrotate">旋转</string>
    <string name="location_des_open_text">是否打开位置信息描述：</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="geofence_des">点击地图，以点击点为中心建立地理围栏，再次点击地图修改地理围栏位置</string>
     
     
    <!-- 腾讯地图 -->
    <string name="demo_label_basemap">地图展示:BasicMapActivity</string>
    <string name="demo_desc_basemap">地图的基本加载显示</string>
    <string name="demo_label_mapfragment">mapfragment展示:MapFragmentActivity</string>
    <string name="demo_desc_mapfragment">mapfragment的基本加载显示</string>
    <string name="demo_label_cust_mapfragment">自定义mapfragment展示:MapFragmentActivity</string>
    <string name="demo_desc_cust_mapfragment">展示用户如何自定义一个带mapView的fragment</string>
    <string name="demo_label_control">地图控制:MapControlActivity</string>
    <string name="demo_desc_control">地图缩放、卫星图层的展示</string>
    <string name="demo_label_geometry">几何图形:MapGeometryActivity</string>
    <string name="demo_desc_geometry">添加、删除覆盖几何图形及图片</string>
    <string name="demo_label_itemized_overlay">覆盖物:ItemizedOverlayActivity</string>
    <string name="demo_desc_itemized_overlay">添加、删除覆盖物</string>
    <string name="demo_label_marker">标注物:MarkerActivity</string>
    <string name="demo_desc_marker">添加标志物及其操作</string>
    <string name="demo_label_latlngbounds">区域检测：LatLngBoudsActivity</string>
    <string name="demo_desc_latlngbounds">检测点与区域的内外关系或区域间的相交关系</string>
    <string name="demo_label_marker_attr">marker相关属性：MarkerAttributeActivity</string>
    <string name="demo_desc_marker_attr">marker的相关属性展示</string>
    <string name="demo_label_location_marker">定位并标注：MarkerAttributeActivity</string>
    <string name="demo_desc_location_marker">定位并标注当前定位位置</string>
</resources>
